...
          },
        ),
      ],
    );

    return MaterialApp.router(
      title: 'Coop Loto',
      theme: ThemeData(colorScheme: ColorScheme.fromSeed(seedColor: Colors.deepPurple)),
      routerConfig: router,
    );
  }
}

